# rag-project

./: .env  .gitignore  chunk_text.py  clean_text.py  docker-compose.yml  embed.py  extracted_text.txt  load_pdf.py  store_qdrant.py
.git-rewrite/: backup-refs  commit  message  revs
.git-rewrite/t/: chunk_text.py  dataset.py  main.py
.git-rewrite/t/backend/: langfuse-docker-compose.yml  requirements.txt
backend/: Dockerfile  evaluation.py  load_pdf.py  main.py  pyproject.toml  store_qdrant.py
backend/prompts/: system_prompt.txt
frontend/rag-ui/: nginx.conf  package-lock.json  package.json
frontend/rag-ui/src/: App.tsx  index.css
